--- a/package.json
+++ b/package.json
@@ -21,41 +21,46 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@nestjs/common": "^7.6.13",
-    "@nestjs/config": "^0.6.3",
-    "@nestjs/core": "^7.6.13",
-    "@nestjs/mapped-types": "^0.3.0",
-    "@nestjs/platform-express": "^7.6.13",
-    "@nestjs/swagger": "^4.7.16",
-    "class-transformer": "^0.4.0",
-    "class-validator": "^0.13.1",
-    "joi": "^17.4.0",
-    "reflect-metadata": "^0.1.13",
-    "rimraf": "^3.0.2",
-    "rxjs": "^6.6.6",
-    "swagger-ui-express": "^4.1.6"
+    "@nestjs/axios": "^3.1.2",
+    "@nestjs/common": "^10.4.9",
+    "@nestjs/config": "^3.3.0",
+    "@nestjs/core": "^10.4.9",
+    "@nestjs/mapped-types": "^2.0.6",
+    "@nestjs/mongoose": "^10.1.0",
+    "@nestjs/platform-express": "^10.4.9",
+    "@nestjs/swagger": "^8.0.7",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
+    "joi": "^17.13.3",
+    "mongodb": "^6.11.0",
+    "mongoose": "^8.8.3",
+    "reflect-metadata": "^0.2.2",
+    "rimraf": "^6.0.1",
+    "rxjs": "^7.8.1",
+    "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
-    "@nestjs/cli": "^7.5.6",
-    "@nestjs/schematics": "^7.2.7",
-    "@nestjs/testing": "^7.6.13",
-    "@types/express": "^4.17.11",
-    "@types/jest": "^26.0.20",
-    "@types/node": "^14.14.31",
-    "@types/supertest": "^2.0.10",
-    "@typescript-eslint/eslint-plugin": "^4.15.2",
-    "@typescript-eslint/parser": "^4.15.2",
-    "eslint": "^7.20.0",
-    "eslint-config-prettier": "^8.1.0",
-    "eslint-plugin-prettier": "^3.3.1",
-    "jest": "^26.6.3",
-    "prettier": "^2.2.1",
-    "supertest": "^6.1.3",
-    "ts-jest": "^26.5.2",
-    "ts-loader": "^8.0.17",
-    "ts-node": "^9.1.1",
-    "tsconfig-paths": "^3.9.0",
-    "typescript": "^4.1.5"
+    "@nestjs/cli": "^10.4.8",
+    "@nestjs/schematics": "^10.2.3",
+    "@nestjs/testing": "^10.4.8",
+    "@types/express": "^5.0.0",
+    "@types/jest": "^29.5.14",
+    "@types/mongodb": "^4.0.7",
+    "@types/node": "^22.9.1",
+    "@types/supertest": "^6.0.2",
+    "@typescript-eslint/eslint-plugin": "^8.15.0",
+    "@typescript-eslint/parser": "^8.15.0",
+    "eslint": "^9.15.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.2.1",
+    "jest": "^29.7.0",
+    "prettier": "^3.3.3",
+    "supertest": "^7.0.0",
+    "ts-jest": "^29.2.5",
+    "ts-loader": "^9.5.1",
+    "ts-node": "^10.9.2",
+    "tsconfig-paths": "^4.2.0",
+    "typescript": "^5.6.3"
   },
   "jest": {
     "moduleFileExtensions": [
@@ -75,6 +80,6 @@
     "testEnvironment": "node"
   },
   "engines": {
-    "node": "14.x"
+    "node": ">=14.0.0"
   }
 }
