--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "compression": "^1.7.5",
+    "helmet": "^8.0.0",
     "joi": "^17.13.3",
     "mongodb": "^6.11.0",
     "mongoose": "^8.8.3",
